[gd_scene load_steps=35 format=3 uid="uid://clabb4kp035pw"]

[ext_resource type="Script" path="res://scenes/modules/module1/sprints/tach_ho.gd" id="1_swjlq"]
[ext_resource type="Theme" uid="uid://b0f85lxjcftcx" path="res://assets/resources/themes/theme_popup.tres" id="2_6r8ap"]
[ext_resource type="FontFile" uid="uid://dm4u5rvan3e7u" path="res://assets/resources/fonts/arialbd.TTF" id="3_d6yqd"]
[ext_resource type="Theme" uid="uid://brdiy7ttotod7" path="res://assets/resources/themes/theme_button.tres" id="3_rchkx"]
[ext_resource type="Texture2D" uid="uid://7njktnl60vll" path="res://assets/sprites/ui/buttons/save.png" id="4_lftyt"]
[ext_resource type="Texture2D" uid="uid://c115dkupyk4wj" path="res://assets/sprites/ui/buttons/submenu_normal_mirrored.png" id="5_8uh0n"]
[ext_resource type="Theme" uid="uid://cpltx4lyxm334" path="res://assets/resources/themes/theme_textinput.tres" id="7_lt3dg"]
[ext_resource type="Texture2D" uid="uid://dib2b4ivnvl4u" path="res://assets/sprites/ui/buttons/reload_white.png" id="9_17nw4"]
[ext_resource type="Texture2D" uid="uid://ugcbgupx7cya" path="res://assets/sprites/ui/buttons/open.png" id="10_ne2qy"]
[ext_resource type="Texture2D" uid="uid://ctqy0hrjjmicj" path="res://assets/sprites/ui/buttons/import.png" id="11_s27kk"]
[ext_resource type="Texture2D" uid="uid://c5n8m08ivk1gs" path="res://assets/sprites/ui/buttons/delete.png" id="12_xr5av"]
[ext_resource type="Texture2D" uid="uid://bklhwn6i50nru" path="res://assets/sprites/ui/buttons/delete_all.png" id="13_styu1"]
[ext_resource type="Texture2D" uid="uid://rvipcqnl28du" path="res://assets/sprites/ui/buttons/submenu_normal.png" id="14_pp0ke"]
[ext_resource type="PackedScene" uid="uid://4tpwkqip551a" path="res://scenes/global_elements/elements/table.tscn" id="15_3ka35"]
[ext_resource type="Theme" uid="uid://dls2qucqgif8p" path="res://assets/resources/themes/theme_panel.tres" id="15_p8c33"]
[ext_resource type="Theme" uid="uid://cvxiiwjwnm8g" path="res://assets/resources/themes/theme_field.tres" id="16_r2wd1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3i3j"]
bg_color = Color(0, 0.466667, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssjah"]
bg_color = Color(0, 0.380392, 0.611765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0b2px"]
bg_color = Color(0, 0.294118, 0.482353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku5kn"]
bg_color = Color(0, 0.304688, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0gxx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tf7ax"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq5f0"]
bg_color = Color(0, 0.466667, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igcac"]
bg_color = Color(0, 0.380392, 0.611765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_270jb"]
bg_color = Color(0, 0.294118, 0.482353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xb835"]
bg_color = Color(0, 0.304688, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbpit"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_0fvoc"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_jbpit")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8y84w"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6i78w"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xadan"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnbjn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ba0fd"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.815686, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4s2d5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="TachHo" type="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_swjlq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BufferTop" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BufferTop" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="TachHoButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
focus_mode = 0
theme = ExtResource("3_rchkx")
text = "Tiến hành tách hộ"
icon = ExtResource("4_lftyt")
alignment = 0
expand_icon = true

[node name="BufferTop2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="BufferMid" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BufferLeft" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_d6yqd")
theme_override_font_sizes/font_size = 16
text = "Hộ Khẩu A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HoKhauA" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChuyenSangB" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("3_rchkx")
text = "Chuyển sang hộ khẩu B"
icon = ExtResource("5_8uh0n")
alignment = 2
icon_alignment = 2
expand_icon = true

[node name="BufferMiddle" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="PanelContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_d6yqd")
theme_override_font_sizes/font_size = 16
text = "Hộ Khẩu B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HoKhauB" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="ChuyenSangA" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("3_rchkx")
text = "Chuyển sang hộ khẩu A"
icon = ExtResource("14_pp0ke")
alignment = 0
expand_icon = true

[node name="BufferRight" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="BufferBottom" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="Table" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="BufferTop" type="PanelContainer" parent="Table"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="Table"]
layout_mode = 2

[node name="Buffer" type="PanelContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="TableButtons" type="HBoxContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Table/HBoxContainer2/TableButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 0

[node name="LamMoiButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("3_rchkx")
theme_override_styles/normal = SubResource("StyleBoxFlat_c3i3j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ssjah")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0b2px")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ku5kn")
icon = ExtResource("9_17nw4")

[node name="PanelContainer" type="PanelContainer" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01
theme_override_styles/panel = SubResource("StyleBoxFlat_i0gxx")

[node name="MoTepButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_mode = 0
theme = ExtResource("3_rchkx")
disabled = true
text = "Mở tệp excel"
icon = ExtResource("10_ne2qy")
alignment = 0
expand_icon = true

[node name="DuongDanTep" type="LineEdit" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
focus_mode = 0
theme = ExtResource("7_lt3dg")
theme_override_styles/normal = SubResource("StyleBoxFlat_tf7ax")
placeholder_text = "   Chưa có tệp nào được chọn"
structured_text_bidi_override = 2

[node name="TaiLenButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
focus_mode = 0
theme = ExtResource("3_rchkx")
disabled = true
text = "Tải lên"
icon = ExtResource("11_s27kk")
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Table/HBoxContainer2/TableButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 19.0

[node name="XoaButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
focus_mode = 0
theme = ExtResource("3_rchkx")
disabled = true
text = "Xóa"
icon = ExtResource("12_xr5av")
alignment = 0
expand_icon = true

[node name="XoaHetButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
focus_mode = 0
theme = ExtResource("3_rchkx")
disabled = true
text = "Xóa Hết"
icon = ExtResource("13_styu1")
alignment = 0
expand_icon = true

[node name="SubmenuTable" type="Button" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("3_rchkx")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq5f0")
theme_override_styles/hover = SubResource("StyleBoxFlat_igcac")
theme_override_styles/pressed = SubResource("StyleBoxFlat_270jb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xb835")
icon = ExtResource("14_pp0ke")
icon_alignment = 1

[node name="Buffer2" type="PanelContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="Table"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="BufferLeft" type="PanelContainer" parent="Table/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="DanhSachNhanKhau" parent="Table/HBoxContainer" instance=ExtResource("15_3ka35")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme = SubResource("Theme_0fvoc")

[node name="BufferRight" type="PanelContainer" parent="Table/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="BufferBottom" type="PanelContainer" parent="Table"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="Popup" type="Node2D" parent="."]

[node name="PopupMenu" type="PopupMenu" parent="Popup"]
title = "Warning!"
initial_position = 1
size = Vector2i(320, 160)
unresizable = false
borderless = false
always_on_top = true
theme = ExtResource("2_6r8ap")
hide_on_item_selection = false
item_count = 1
item_0/text = "sdasdas"
item_0/id = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Popup"]
title = "Xác nhận"
initial_position = 1
size = Vector2i(320, 160)
always_on_top = true
popup_window = true
theme = ExtResource("2_6r8ap")
ok_button_text = "Có"
cancel_button_text = "Không"

[node name="AcceptDialog" type="AcceptDialog" parent="Popup"]
title = "Thông báo"
initial_position = 1
size = Vector2i(320, 160)
always_on_top = true
popup_window = true
min_size = Vector2i(200, 70)
theme = ExtResource("2_6r8ap")

[node name="FileDialog" type="FileDialog" parent="Popup"]
title = "Open a File"
initial_position = 1
size = Vector2i(720, 480)
always_on_top = true
theme = ExtResource("2_6r8ap")
ok_button_text = "Open"
cancel_button_text = "Hủy"
file_mode = 0
access = 2
filters = PackedStringArray(".xlsx; Excel files")

[node name="ThongTinHoKhau" type="PanelContainer" parent="Popup"]
offset_left = 384.0
offset_top = 48.0
offset_right = 896.0
offset_bottom = 360.0
theme = ExtResource("15_p8c33")

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/ThongTinHoKhau"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6i78w")

[node name="Label" type="Label" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_d6yqd")
theme_override_font_sizes/font_size = 16
text = "Thông tin hộ khẩu"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="HSeparator2" type="HSeparator" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
size_flags_stretch_ratio = 20.0

[node name="PanelContainer3" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="PanelContainer" type="VBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="PanelContainer" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="ScrollContainer" type="ScrollContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Buffer" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xadan")

[node name="TruongThongTin" type="VBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="Buffer" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="MaChuHo" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Mã Chủ Hộ*"
flat = true
alignment = 0

[node name="SoNha" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Số Nhà"
flat = true
alignment = 0

[node name="DuongPho" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Đường Phố*"
flat = true
alignment = 0

[node name="ThiTran" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Thị Trấn*"
flat = true
alignment = 0

[node name="QuanHuyen" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Quận Huyện*"
flat = true
alignment = 0

[node name="TinhThanh" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Tỉnh Thành*"
flat = true
alignment = 0

[node name="GhiChu" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("16_r2wd1")
disabled = true
text = "Ghi Chú"
flat = true
alignment = 0

[node name="Buffer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="DienThongTinNhanKhau" type="VBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 4
alignment = 1

[node name="Buffer" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MaChuHo" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")
caret_blink = true
caret_blink_interval = 0.5

[node name="SoNha" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="DuongPho" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="ThiTran" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="QuanHuyen" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="TinhThanh" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="GhiChu" type="LineEdit" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
theme = ExtResource("7_lt3dg")

[node name="Buffer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinNhanKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Buffer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xadan")

[node name="HBoxContainer3" type="HBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="HSeparator2" type="HSeparator" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
size_flags_stretch_ratio = 20.0

[node name="PanelContainer3" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="HBoxContainer4" type="HBoxContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.43
alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.29
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="LuuButton" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57
theme = ExtResource("3_rchkx")
text = "Lưu"
icon = ExtResource("4_lftyt")
expand_icon = true

[node name="DongButton" type="Button" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57
theme = ExtResource("3_rchkx")
theme_override_styles/normal = SubResource("StyleBoxFlat_gnbjn")
theme_override_styles/hover = SubResource("StyleBoxFlat_ba0fd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4s2d5")
text = "Đóng"

[node name="PanelContainer3" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[node name="PanelContainer2" type="PanelContainer" parent="Popup/ThongTinHoKhau/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = SubResource("StyleBoxFlat_8y84w")

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TachHoButton" to="." method="_on_tach_ho_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/ChuyenSangB" to="." method="_on_chuyen_sang_b_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/ChuyenSangA" to="." method="_on_chuyen_sang_a_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer2/LamMoiButton" to="." method="_on_lam_moi_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/SubmenuTable" to="." method="_on_submenu_table_pressed"]
[connection signal="confirmed" from="Popup/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4/LuuButton" to="." method="_on_luu_button_pressed"]
[connection signal="pressed" from="Popup/ThongTinHoKhau/VBoxContainer/HBoxContainer4/DongButton" to="." method="_on_dong_button_pressed"]
